bump to include region-from-loc
