# openapi.json
@@ -85,6 +85,7 @@
             "required": true,
             "schema": {
               "type": "string",
+              "format": "email",
               "description": "valid email address. The email address used to register will only be used for communication regarding API outages and updates. The email address will not be shared or used for any other promotional purpose. For others in your organization who would like these updates, they can subscribe to our Status Page. ",
               "title": "Email"
             },
@@ -224,6 +225,88 @@
         ]
       }
     },
+    "/v3/region-from-loc": {
+      "get": {
+        "tags": [
+          "Understand"
+        ],
+        "summary": "Determine Grid Region",
+        "description": "Emissions intensity varies by location, specifically the location where an energy-using device is interconnected to the grid. This endpoint, provided with latitude and longitude parameters, returns the details of the balancing authority (BA) serving that location, if known, or a Coordinates not found error if the point lies outside of known/covered BAs. For more information on what a balancing authority is, see [this explanation](https://www.eia.gov/todayinenergy/detail.php?id=27152) from the EIA.",
+        "operationId": "get_reg_loc_v3_region_from_loc_get",
+        "parameters": [
+          {
+            "name": "signal_type",
+            "in": "query",
+            "required": true,
+            "schema": {
+              "enum": [
+                "co2_moer",
+                "co2_aoer",
+                "health_damage"
+              ],
+              "type": "string",
+              "description": "signal_type for which to look up region",
+              "title": "Signal Type"
+            },
+            "description": "signal_type for which to look up region",
+            "example": "co2_moer"
+          },
+          {
+            "name": "latitude",
+            "in": "query",
+            "required": true,
+            "schema": {
+              "type": "number",
+              "description": "Latitude of desired location",
+              "title": "Latitude"
+            },
+            "description": "Latitude of desired location",
+            "example": -72.519
+          },
+          {
+            "name": "longitude",
+            "in": "query",
+            "required": true,
+            "schema": {
+              "type": "number",
+              "description": "Longitude of desired location",
+              "title": "Longitude"
+            },
+            "description": "Longitude of desired location",
+            "example": 42.372
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Successful Response",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/RegionLocResponse"
+                }
+              }
+            }
+          },
+          "422": {
+            "description": "Validation Error",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/HTTPValidationError"
+                }
+              }
+            }
+          }
+        },
+        "x-codeSamples": [
+          {
+            "lang": "Python",
+            "source": "\n# Make sure to replace the parameters username (e.g. ‘freddo’) and password (e.g. ‘the_frog’) with your registered\n# credentials when using this code. You should not add in your token here. The code automatically generates a new token\n# each time you run it.\n\n\nimport requests\nfrom requests.auth import HTTPBasicAuth\n\nlogin_url = 'https://api.watttime.org/login'\ntoken = requests.get(login_url, auth=HTTPBasicAuth(‘freddo’, ‘the_frog’)).json()['token']\n\nregion_url = 'https://api.watttime.org/v3/region-from-loc'\nheaders = {'Authorization': 'Bearer {}'.format(token)}\nparams = {'latitude': '42.372', 'longitude': '-72.519', 'signal_type': 'co2_moer'}\nrsp=requests.get(region_url, headers=headers, params=params)\nprint(rsp.text)\n",
+            "label": "Python"
+          }
+        ]
+      }
+    },
     "/v3/forecast": {
       "get": {
         "tags": [
@@ -234,12 +317,12 @@
         "operationId": "get_current_forecast_v3_forecast_get",
         "parameters": [
           {
-            "description": "Region abbreviation associated with location, from result of query to `/ba-from-loc`",
+            "description": "Region abbreviation associated with location, from result of query to `/region-from-loc`",
             "required": true,
             "schema": {
               "type": "string",
               "title": "Region",
-              "description": "Region abbreviation associated with location, from result of query to `/ba-from-loc`"
+              "description": "Region abbreviation associated with location, from result of query to `/region-from-loc`"
             },
             "example": "CAISO_NORTH",
             "name": "region",
@@ -373,12 +456,12 @@
             "in": "query"
           },
           {
-            "description": "Region abbreviation associated with location, from result of query to `/ba-from-loc`",
+            "description": "Region abbreviation associated with location, from result of query to `/region-from-loc`",
             "required": true,
             "schema": {
               "type": "string",
               "title": "Region",
-              "description": "Region abbreviation associated with location, from result of query to `/ba-from-loc`"
+              "description": "Region abbreviation associated with location, from result of query to `/region-from-loc`"
             },
             "example": "CAISO_NORTH",
             "name": "region",
@@ -512,12 +595,12 @@
             "in": "query"
           },
           {
-            "description": "Region abbreviation associated with location, from result of query to `/ba-from-loc`",
+            "description": "Region abbreviation associated with location, from result of query to `/region-from-loc`",
             "required": true,
             "schema": {
               "type": "string",
               "title": "Region",
-              "description": "Region abbreviation associated with location, from result of query to `/ba-from-loc`"
+              "description": "Region abbreviation associated with location, from result of query to `/region-from-loc`"
             },
             "example": "CAISO_NORTH",
             "name": "region",
@@ -625,12 +708,12 @@
         "operationId": "get_full_my_access_hypercube_v3_my_access_get",
         "parameters": [
           {
-            "description": "Region abbreviation associated with location, from result of query to `/ba-from-loc`",
+            "description": "Region abbreviation associated with location, from result of query to `/region-from-loc`",
             "required": false,
             "schema": {
               "type": "string",
               "title": "Region",
-              "description": "Region abbreviation associated with location, from result of query to `/ba-from-loc`"
+              "description": "Region abbreviation associated with location, from result of query to `/region-from-loc`"
             },
             "example": "CAISO_NORTH",
             "name": "region",
@@ -3873,6 +3956,34 @@
         "title": "PasswordResponse",
         "example": {
           "ok": "Please check your email for the password reset link"
+        }
+      },
+      "RegionLocResponse": {
+        "properties": {
+          "abbrev": {
+            "type": "string",
+            "title": "Abbrev"
+          },
+          "name": {
+            "type": "string",
+            "title": "Name"
+          },
+          "signal_type": {
+            "type": "string",
+            "title": "Signal Type"
+          }
+        },
+        "type": "object",
+        "required": [
+          "abbrev",
+          "name",
+          "signal_type"
+        ],
+        "title": "RegionLocResponse",
+        "example": {
+          "abbrev": "ISONE_WCMA",
+          "name": "ISONE Western/Central Massachusetts",
+          "signal_type": "co2_moer"
         }
       },
       "RegisterResponse": {
